# cutthroat-coliseum

./: .gitignore  README.md  compile.sh  init.ps1  init.sh  run.sh
code/: .gitattributes  .gitignore  CMakeLists.txt  Makefile  cmake.sh  init.ps1  init.sh  vcpkg.json
code/assets/: temp.toml
code/assets/Rml/: demo.rml
code/assets/configs/: CarPhysics.toml
code/assets/models/: AI_beta_cart.mtl  STADIUM_MAXIMAL.mtl  Stadium.mtl  Stadium_MINIMAL.mtl  TEST.mtl  beta_cart.mtl  plant-low-poly.mtl  statue-low-poly.mtl  zz-track-ai-nav.mtl  zz-track-collider-road.mtl  zz-track-collider-wall.mtl  zz-track-mesh.mtl  zz-track-road.mtl
code/assets/models/demo-track/: demo-nav.mtl  intro-track.mtl
code/assets/models/demo-track/colliders/: pillar-1.mtl  road.mtl  walls.mtl
code/assets/models/obstacles/: Pillar_007.mtl  Pillar_011.mtl
code/assets/models/ramps/: Ramp002.mtl
code/assets/shaders/: VFX.frag  VFX.vert  cel.frag  cel.vert  gShader.frag  gShader.vert  gShader_noTexture.frag  lighting_simple.frag  lighting_simple.vert  lighting_textures.frag  lighting_textures.vert  line.frag  offscreen.frag  offscreen.vert  particle.frag  particle.vert  passthrough.frag  shadowMap.frag  shadowMap.vert  skybox.frag  skybox.vert  test.frag  test.vert  wireframe.frag  wireframe.vert
code/assets/vehicledata/: Base.json  EngineDrive.json
code/client/: AICar.cpp  AICar.h  CMakeLists.txt  Camera.cpp  Camera.h  Car.cpp  Car.h  CarPhysics.cpp  CarPhysics.h  CarSample.cpp  CarSample.h  CenterMass.cpp  CenterMass.h  FrameCounter.h  GRAPHICS_TESTBENCH.h  Geometry.h  GraphicsSystem.cpp  GraphicsSystem.h  ImGuiDebug.cpp  ImGuiDebug.h  ImGuiTuneables.cpp  ImGuiTuneables.h  Input.cpp  Input.h  Makefile  Obstacles.cpp  Obstacles.h  PhysicsSystem.cpp  PhysicsSystem.h  Physx.cpp  Physx.h  Position.cpp  Position.h  ShaderProgram.cpp  ShaderProgram.h  TetherGraphics.cpp  TetherGraphics.h  Time.h  Window.cpp  Window.h  (+3 more)
code/client/curve/: Curve.cpp  Curve.h
code/client/entities/: AIEntity.cpp
code/client/entities/car/: AICar.cpp  AICar.h  AIEntity.cpp  AIEntity.h  Car.cpp  Car.h  CarUtils.cpp  CarUtils.h  CollisionSounds.h  TireTracks.cpp  TireTracks.h
code/client/entities/car/nav/: NavPath.cpp  NavPath.h
code/client/entities/physics/: LevelCollider.cpp  LevelCollider.h  MeshCollider.cpp  MeshCollider.h  Obstacles.cpp  Obstacles.h
code/client/physics/: LevelCollider.cpp  LevelCollider.h
code/client/physx/snippetvehicle2common/: SnippetVehicleHelpers.cpp
code/client/systems/: GraphicsSystem.cpp  GraphicsSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RaceSystem.cpp  RaceSystem.h  SoundSystem.cpp  SoundSystem.h  ai.cpp  ai.h  components.cpp  components.h
code/client/systems/UI/: RmlUi_Backend.h  RmlUi_Backend_SDL_GL3.cpp  RmlUi_Include_GL3.h  RmlUi_Platform_SDL.cpp  RmlUi_Platform_SDL.h  RmlUi_Renderer_GL3.cpp  RmlUi_Renderer_GL3.h
code/client/systems/graphics/: Camera.cpp  Camera.h  GLDebug.cpp  GLHandles.h  Geometry.h  IndexBuffer.h  ShaderProgram.cpp  Texture.cpp  Texture.h
code/client/systems/graphics/snippetrender/: SnippetRender.cpp
code/client/systems/londonfog/: components.cpp  components.h
code/client/utils/: AssetLoader.cpp  AssetLoader.h  PxConversionUtils.h
code/lib/: Board.cpp  Board.h  CMakeLists.txt  Level.cpp  Makefile  Move.h  Piece.h  PlayerColor.h  int_types.h
code/lib/core/: ecs.cpp  ecs.h
code/lib/graphics/: Camera.cpp  Camera.h  GLHandles.cpp  Geometry.cpp  Geometry.h  IndexBuffer.cpp  Shader.cpp  Texture.cpp
code/lib/graphics/snippetrender/: SnippetCamera.cpp  SnippetCamera.h  SnippetRender.cpp  SnippetRender.h
code/lib/systems/: GraphicsSystem.cpp  GraphicsSystem.h  PhysicsSystem.h  components.cpp  components.h  ecs.h  pathfinding.cpp  pathfinding.h
code/lib/utils/: PxConversionUtils.h
code/tst/: CMakeLists.txt  Makefile  ecs_tests.cpp  moves.cpp  pathfinding_tests.cpp
raw_assets/: intro-track.blend  intro-track.blend1  level-track.blend  level-track.blend1  pillarboost.xcf  ramp_boost.xcf  wrongway.xcf
raw_assets/gentitles/: generate-titles.py
